--- a/front/index.html
+++ b/front/index.html
@@ -42,16 +42,19 @@
                               role="button" data-bs-toggle="dropdown">Top Sales
                         </span>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#/top-sales/edit">Browse or Edit</a></li>
+                            <li><a class="dropdown-item" href="#/top-sales/list">Browse or Edit</a></li>
                             <li><a class="dropdown-item" href="#/top-sales/find">Find Top Sales</a></li>
                         </ul>
+                    </li>
+                    <li class="nav-item" >
+                        <a class="nav-link" href="#/pager/current-page">Pager</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <main class="d-flex align-items-end flex-column" id="main"></main>
+    <main id="main"></main>
 
     <footer class="pt-2 border-top">
         <p>icd0019 Sample Application</p>
