--- a/front/index.html
+++ b/front/index.html
@@ -49,6 +49,9 @@
                     <li class="nav-item" >
                         <a class="nav-link" href="#/pager/current-page">Pager</a>
                     </li>
+                    <li class="nav-item" >
+                        <a class="nav-link" href="#/analyser/results">Analyser</a>
+                    </li>
                 </ul>
             </div>
         </div>
