--- a/front/index.html
+++ b/front/index.html
@@ -52,6 +52,15 @@
                     <li class="nav-item" >
                         <a class="nav-link" href="#/analyser/results">Analyser</a>
                     </li>
+                    <li class="nav-item dropdown">
+                        <span class="nav-link dropdown-toggle"
+                              role="button" data-bs-toggle="dropdown">Shopping Cart
+                        </span>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#/cart/products">Products</a></li>
+                            <li><a class="dropdown-item" href="#/cart/services">Services</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
