Fp analyser support

--- a/front/index.html
+++ b/front/index.html
@@ -61,6 +61,15 @@
                             <li><a class="dropdown-item" href="#/cart/services">Services</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item dropdown">
+                        <span class="nav-link dropdown-toggle"
+                              role="button" data-bs-toggle="dropdown">Sales (fp)
+                        </span>
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#/fp-analyser/list">Browse</a></li>
+                            <li><a class="dropdown-item" href="#/fp-analyser/info">Info</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
