--- a/front/index.html
+++ b/front/index.html
@@ -70,6 +70,9 @@
                             <li><a class="dropdown-item" href="#/fp-analyser/info">Info</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#/customers">Customers</a>
+                    </li>
                 </ul>
             </div>
         </div>
